--- a/app.json
+++ b/app.json
@@ -2,48 +2,48 @@
     "name": "Naya Pyro",
     "description": "Nothing Speciall !!!.",
     "logo": "https://telegra.ph//file/75acabea0a9cc6679c2d4.jpg",
-    "keywords": ["telegram", "userbot", "pyrogram"],
+    "keywords": ["telegram", "userbot", "kymang"],
     "repository": "https://github.com/naya1503/Naya-Pyro",
     "stack": "heroku-22",
     "env": {
         "SESSION1": {
-            "description": "Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": true
         },
         "SESSION2": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "SESSION3": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "SESSION4": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "SESSION5": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "SESSION6": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "SESSION7": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "SESSION8": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "SESSION9": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "SESSION10": {
-            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String Pyrogram V2 Ambil Di @NayaStringBot",
+            "description": "Silakan Isi Jika Ingin Menggunkan 5 akun Untuk 1 App, Isi String kymang V2 Ambil Di @NayaStringBot",
             "required": false
         },
         "API_ID": {
